# fastapi-template

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  Makefile  docker-compose.yaml  pyproject.toml  setup.cfg
src/: Dockerfile  alembic.ini  app.py  config.py  requirements.txt
src/database/: connection.py  orm.py
src/domains/: __init__.py  models.py
src/dto/: models.py
src/endpoints/: city_controllers.py  healthcheck.py
src/migrations/: env.py
src/migrations/versions/: fe4cf26d20c5_.py
src/repositories/: base.py  cities.py
src/tests/: conftest.py
src/tests/http/: test_connection.py  test_endpoints.py
src/tests/integrations/: test_repos.py
src/utils/: dependences.py  middlewares.py
